//
//  ScreensText.swift
//  TrafficLightSystem
//
//  Created by Georgi Georgiev on 31.10.24.
//

struct ScreensText {
    struct SetupCar {
        static let title = "Weclome to 🚦 Traffic Light System"
        static let subtitle = "Please enter you car model 🚗"
        static let textFieldPlacerholder = "Enter Car model"
        static let driveButtonText = "Drive"
    }
    
    struct TrafficLightView {
        static let title = "Your are driving:"
    }
}
